--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray"
-    tools:context=".RockLite"
+    tools:context=".MainActivity"
     tools:ignore="MergeRootFrame" >
 
     <android.support.v4.widget.DrawerLayout
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/relativeLayout1"
         android:background="@android:color/transparent"
-        tools:context="com.zhntd.nick.rocklite.RockLite" >
+        tools:context="com.zhntd.nick.rocklite.MainActivity" >
 
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
