--- a/res/layout/layout_list_item.xml
+++ b/res/layout/layout_list_item.xml
@@ -43,6 +43,14 @@
             android:textColor="@color/gray_light"
             android:textSize="18sp" />
 
+        <TextView
+            android:id="@+id/tv_duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@id/line_one"
+            android:layout_marginRight="5dp"
+            android:text="00:00" />
     </RelativeLayout>
 
 </RelativeLayout>
