--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="gray_light">#F5F5F5</color>
     <color name="gray">#696969</color>
-      <!-- A light Holo shade of blue -->
+    <!-- A light Holo shade of blue -->
     <color name="holo_blue_light">#ff33b5e5</color>
     <!-- A light Holo shade of gray -->
     <color name="holo_gray_light">#33999999</color>
@@ -25,5 +26,7 @@
     <color name="holo_blue_bright">#ff00ddff</color>
     <!-- A really bright Holo shade of gray -->
     <color name="holo_gray_bright">#33CCCCCC</color>
-    
+    <color name="main">#FF31C27C</color>
+    <color name="main_dark">#FF535353</color>
+
 </resources>
