modified a package name

--- a/res/layout/play_activity_layout.xml
+++ b/res/layout/play_activity_layout.xml
@@ -51,7 +51,7 @@
         android:background="@android:color/transparent"
         android:orientation="vertical" >
 
-        <org.loader.liteplayer.ui.PagerIndicator
+        <com.zhntd.nick.rocklite.views.PagerIndicator
             android:id="@+id/pi_play_indicator"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
