--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="@android:color/transparent" />
+            android:background="@color/gray" />
     </android.support.v4.widget.DrawerLayout>
     <!-- 底部控制播放 -->
 
